Updated 2 files via CloudCannon.

--- a/SUITES-and-VILLAS.html
+++ b/SUITES-and-VILLAS.html
@@ -35,14 +35,24 @@ blocks:
         room-style:
             -
                 heading: STUDIO SUITES
-                img: /uploads/KC-Regent-Arch-1.jpg
+                img: /uploads/studio-suites.jpg
                 rooms:
                     -
-                        name: Ocean View King Room
-                        size: 120
-                        bed-size: king bed-size
+                        name: Ocean View
+                        size: 76
+                        bed-size: KING BED
                         sleeps: 2
-                        content: "Positioned within lush tropical landscapes, the Studio Suite draws  upon the artistry of Indonesian design, inviting quiet indulgence. Step  onto the balcony to absorb Bali’s verdant beauty and vibrant blooms,  gaze over the Indian ocean in an Ocean View, or step from your terrace  directly into the turquoise pool with the Lagoon Access. A king bed  offers serene comfort, while unlimited laundry, all‑day breakfast, and  assistance from a Regent Experience Agent elevate your stay.\_"
+                        content: >-
+                            Positioned within lush tropical landscapes, the
+                            Studio Suite draws  upon the artistry of Indonesian
+                            design, inviting quiet indulgence. Step  onto the
+                            balcony to absorb Bali’s verdant beauty and vibrant
+                            blooms,  gaze over the Indian ocean in an Ocean
+                            View, or step from your terrace  directly into the
+                            turquoise pool with the Lagoon Access. A king bed 
+                            offers serene comfort, while unlimited laundry,
+                            all‑day breakfast, and  assistance from a Regent
+                            Experience Agent elevate your stay.&nbsp;
                     -
                         name: Garden View King Room
                         size: 120
@@ -77,6 +87,56 @@ blocks:
                         bed-size: king bed-size
                         sleeps: 2
                         content: "Positioned within lush tropical landscapes, the Studio Suite draws  upon the artistry of Indonesian design, inviting quiet indulgence. Step  onto the balcony to absorb Bali’s verdant beauty and vibrant blooms,  gaze over the Indian ocean in an Ocean View, or step from your terrace  directly into the turquoise pool with the Lagoon Access. A king bed  offers serene comfort, while unlimited laundry, all‑day breakfast, and  assistance from a Regent Experience Agent elevate your stay.\_"
+            -
+                heading: Two Bedroom Suites
+                img: ''
+                rooms:
+                    -
+                        name: ''
+                        size: 0
+                        bed-size: ''
+                        sleeps: 0
+                        content: ''
+            -
+                heading: ''
+                img: ''
+                rooms:
+                    -
+                        name: ''
+                        size: 0
+                        bed-size: ''
+                        sleeps: 0
+                        content: ''
+            -
+                heading: Premium One Bedroom Suites
+                img: ''
+                rooms:
+                    -
+                        name: ''
+                        size: 0
+                        bed-size: ''
+                        sleeps: 0
+                        content: ''
+            -
+                heading: Private Villas
+                img: ''
+                rooms:
+                    -
+                        name: ''
+                        size: 0
+                        bed-size: ''
+                        sleeps: 0
+                        content: ''
+            -
+                heading: Penthouse
+                img: ''
+                rooms:
+                    -
+                        name: ''
+                        size: 0
+                        bed-size: ''
+                        sleeps: 0
+                        content: ''
         color-scheme: mint-200
         min-height: 50vh
     -
