Updated 1 file via CloudCannon.

--- a/SUITES-and-VILLAS.html
+++ b/SUITES-and-VILLAS.html
@@ -142,11 +142,12 @@ blocks:
     -
         _id: slider
         block-content-html: >-
-            <h2 class="heading-lg"> Spaces to explore</h2><p>Where most websites
-            confine your content to rigid aspect ratios, we design with freedom
-            in mind. Our designs support flexible layouts that adapt seamlessly
-            to your unique imagery —whether it's panoramic, vertical, or
-            cinematic—to tell your story in its most powerful form.</p>
+            <h2 class="heading-lg">Regent Amenities</h2><p>Our suites offer
+            serene comfort, while unlimited laundry, all‑day breakfast, and
+            assistance from a Regent Experience Agent elevate your stay. Indulge
+            in a complimentary refreshment gallery, curated with gourmet
+            delights, premium spirits, and a selection of non-alcoholic
+            beverages.</p>
         text-alignment: center
         text-box-max-width: 35rem
         slider:
