more fields for rooms

--- a/dinning-taru.html
+++ b/dinning-taru.html
@@ -51,6 +51,7 @@ blocks:
         color-scheme: base
     -   
         _id: grid-links
+        heading: Menu
         buttons:
             -
                 url: '#'
