--- a/dinning.html
+++ b/dinning.html
@@ -18,19 +18,7 @@ blocks:
         color-scheme: dark
     -
         _id: text-block-top-overlap
-        block-content-html: >-
-            <h3>REGENT BALI CANGGU</h3><h2 class="heading-lg">A coastal haven
-            where Bali's spirit unravels</h2><p>On Canggu Beach, surfers are
-            silhouetted in the morning sun, boards  under arms ready to take on
-            Bali's famous reef breaks. Watching the  waves, listening to the
-            call of the Indian Ocean, you might catch the  scent of incense or
-            the melody of the gamelan emitting from Pura Batu  Mejan, a
-            centuries old sea temple set on rock as black as jet. A blessed way
-            to begin each day.</p><div style="max-width:25rem; margin:auto;
-            margin-bottom:2rem;"><h3 class="mt-8">A METICULOUSLY CURATED RESORT
-            DESERVES AN INTENTIONALLY CRAFTED WEBSITE. LET US BUILD ONE FOR
-            YOU.</h3></div> <a href="/uploads/KC-proposal.pdf"
-            class="button-featured">DOWNLOAD PROPOSAL</a>
+        block-content-html: "<h3>RESTUARANTS &amp; DINING</h3><h2 class=\"heading-lg\">An Oasis of Gastronomy Awaits</h2><p>Six dining venues sweep guests through a fascinating culinary journey of Balinese, Asian and International cuisine that showcase delicate layers of flavour and art form. The Regent food &amp; beverage philosophy, Taste Gallery, presents a multi-sensory culinary experience promising to uplift guests to new heights through immersive and unexpected creatives.\L \L </p><p>For the very first time, Regent Bali Canggu is proud to introduce the extraordinary talents of award-winning Chef Andrew Walsh, who will lead two of the resort’s culinary concepts, setting the stage for unforgettable moments.</p> "
         overlay-color-scheme: mint-400
         content-max-width: 35rem
         text-alignment: center
