Updated 2 files via CloudCannon.

--- a/dinning.html
+++ b/dinning.html
@@ -27,36 +27,25 @@ blocks:
     -
         _id: split-banner-slider
         content:
-            subHeading: TARU
+            subHeading:
             heading: TARU
             p-text: >-
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                do eiusmod  tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim  veniam, quis nostrud exercitation ullamco
-                laboris nisi ut aliquip ex ea  commodo consequat.</p><p>Open 8am
-                - 9pm everyday.</p>
+                <p>The signature culinary destination of the resort, Taru offers
+                an immersive dining experience, through reinvented authentic
+                flavours of essential Indonesian dishes, innovated by touches of
+                modern cooking techniques and ingredients, balanced with
+                contrasting international specialties.<br /><br />Open 7am -
+                10pm everyday.</p>
         carousel:
             desktop-image-position: right
             dots: true
             slides:
                 -
-                    img: /uploads/KC-Regent-slider-11.jpg
-                    alt: Regent Bali Canggu
+                    img: /uploads/taru1.jpg
+                    alt: Taru
                 -
-                    img: /uploads/KC-Regent-slider-10.jpg
-                    alt: Regent Bali Canggu
-                -
-                    img: /uploads/KC-Regent-slider-9.jpg
-                    alt: Regent Bali Canggu
-                -
-                    img: /uploads/KC-Regent-slider-8.jpg
-                    alt: Regent Bali Canggu
-                -
-                    img: /uploads/KC-Regent-slider-7.jpg
-                    alt: Regent Bali Canggu
-                -
-                    img: /uploads/KC-Regent-slider-6.jpg
-                    alt: Regent Bali Canggu
+                    img: /uploads/taru-1.jpg
+                    alt: Taru
         color-scheme: base
         scheme-padding: small-padding
         scheme-max-width: l
