--- a/dinning.html
+++ b/dinning.html
@@ -52,72 +52,46 @@ blocks:
     -
         _id: split-banner-slider
         content:
-            subHeading: TARU
-            heading: TARU
+            subHeading:
+            heading: BEACH HOUSE
             p-text: >-
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                do eiusmod  tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim  veniam, quis nostrud exercitation ullamco
-                laboris nisi ut aliquip ex ea  commodo consequat.</p><p>Open 8am
-                - 9pm everyday.</p>
+                <p>A stunning addition to the Canggu coastline, the Beach House
+                lures with its shimmering pool, and ocean breeze. An ideal
+                setting for craft cocktails and the delicate flavours of the
+                sea.<br /><br /><br />Open 8am - 10pm everyday.</p>
         carousel:
             desktop-image-position: left
             dots: true
             slides:
                 -
-                    img: /uploads/KC-Regent-slider-11.jpg
-                    alt: Regent Bali Canggu
+                    img: /uploads/beach-house-1.jpg
+                    alt: Beach House
                 -
-                    img: /uploads/KC-Regent-slider-10.jpg
-                    alt: Regent Bali Canggu
-                -
-                    img: /uploads/KC-Regent-slider-9.jpg
-                    alt: Regent Bali Canggu
-                -
-                    img: /uploads/KC-Regent-slider-8.jpg
-                    alt: Regent Bali Canggu
-                -
-                    img: /uploads/KC-Regent-slider-7.jpg
-                    alt: Regent Bali Canggu
-                -
-                    img: /uploads/KC-Regent-slider-6.jpg
-                    alt: Regent Bali Canggu
+                    img: /uploads/beach-house-2.jpg
+                    alt: Beach House
         color-scheme: base
         scheme-padding: small-padding
         scheme-max-width: l
     -
         _id: split-banner-slider
         content:
-            subHeading: TARU
-            heading: TARU
+            subHeading:
+            heading: SAZON
             p-text: >-
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                do eiusmod  tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim  veniam, quis nostrud exercitation ullamco
-                laboris nisi ut aliquip ex ea  commodo consequat.</p><p>Open 8am
-                - 9pm everyday.</p>
+                <p>Led by award-winning Chef Andrew Walsh, experience the
+                neighborhood Spanish hideaway on Batu Bolong, where vibrant
+                atmosphere meets authentic flavours.<br /><br /><br />Mon -
+                Thurs Open 8am - 9pm <br />Fri - Sat Open Noon - 4am</p>
         carousel:
             desktop-image-position: right
             dots: true
             slides:
                 -
-                    img: /uploads/KC-Regent-slider-11.jpg
-                    alt: Regent Bali Canggu
+                    img: /uploads/sazon-1.jpg
+                    alt: Sazon
                 -
-                    img: /uploads/KC-Regent-slider-10.jpg
-                    alt: Regent Bali Canggu
-                -
-                    img: /uploads/KC-Regent-slider-9.jpg
-                    alt: Regent Bali Canggu
-                -
-                    img: /uploads/KC-Regent-slider-8.jpg
-                    alt: Regent Bali Canggu
-                -
-                    img: /uploads/KC-Regent-slider-7.jpg
-                    alt: Regent Bali Canggu
-                -
-                    img: /uploads/KC-Regent-slider-6.jpg
-                    alt: Regent Bali Canggu
+                    img: /uploads/sazon-2.jpg
+                    alt: Sazon
         color-scheme: base
         scheme-padding: small-padding
         scheme-max-width: l
