Updated 3 files via CloudCannon.

--- a/dinning.html
+++ b/dinning.html
@@ -98,36 +98,23 @@ blocks:
     -
         _id: split-banner-slider
         content:
-            subHeading: TARU
-            heading: TARU
+            subHeading:
+            heading: POOL BAR
             p-text: >-
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                do eiusmod  tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim  veniam, quis nostrud exercitation ullamco
-                laboris nisi ut aliquip ex ea  commodo consequat.</p><p>Open 8am
-                - 9pm everyday.</p>
+                <p>Lounge poolside, where private cabanas offer serene retreats,
+                and the gentle ripple of fountains blends with the rhythmic
+                crash of distant waves along the shore.<br /><br /><br /><br
+                />Open 7am - 7pm everyday.</p>
         carousel:
             desktop-image-position: left
             dots: true
             slides:
                 -
-                    img: /uploads/KC-Regent-slider-11.jpg
-                    alt: Regent Bali Canggu
+                    img: /uploads/pool-bar1.jpg
+                    alt: Pool bar
                 -
-                    img: /uploads/KC-Regent-slider-10.jpg
-                    alt: Regent Bali Canggu
-                -
-                    img: /uploads/KC-Regent-slider-9.jpg
-                    alt: Regent Bali Canggu
-                -
-                    img: /uploads/KC-Regent-slider-8.jpg
-                    alt: Regent Bali Canggu
-                -
-                    img: /uploads/KC-Regent-slider-7.jpg
-                    alt: Regent Bali Canggu
-                -
-                    img: /uploads/KC-Regent-slider-6.jpg
-                    alt: Regent Bali Canggu
+                    img: /uploads/pool-bar2.jpg
+                    alt: Pool bar
         color-scheme: base
         scheme-padding: small-padding
         scheme-max-width: l
