--- a/SUITES-and-VILLAS.html
+++ b/SUITES-and-VILLAS.html
@@ -37,38 +37,25 @@ blocks:
                 heading: STUDIO SUITES
                 img: /uploads/studio-suites.jpg
                 rooms:
-                    - name: Ocean View King Room
-                      size: 120
-                      bed-size: king bed-size
-                      sleeps: 2
-                      extra-feature:
-                        - additional Living area
-                        - Ocean view
-                      content: Positioned within lush tropical landscapes, the Studio Suite draws  upon the artistry of Indonesian design, inviting quiet indulgence. Step  onto the balcony to absorb Bali’s verdant beauty and vibrant blooms,  gaze over the Indian ocean in an Ocean View, or step from your terrace  directly into the turquoise pool with the Lagoon Access. A king bed  offers serene comfort, while unlimited laundry, all‑day breakfast, and  assistance from a Regent Experience Agent elevate your stay. 
-                    - name: Garden View King Room
-                      size: 120
-                      bed-size: king bed-size
-                      sleeps: 2
-                      extra-feature:
-                        - additional Living area
-                        - Ocean view
-                      content: Positioned within lush tropical landscapes, the Studio Suite draws  upon the artistry of Indonesian design, inviting quiet indulgence. Step  onto the balcony to absorb Bali’s verdant beauty and vibrant blooms,  gaze over the Indian ocean in an Ocean View, or step from your terrace  directly into the turquoise pool with the Lagoon Access. A king bed  offers serene comfort, while unlimited laundry, all‑day breakfast, and  assistance from a Regent Experience Agent elevate your stay. 
-                    - name: Lagoon View King Room
-                      size: 120
-                      bed-size: king bed-size
-                      sleeps: 2
-                      extra-feature:
-                        - additional Living area
-                        - Ocean view
-                      content: Positioned within lush tropical landscapes, the Studio Suite draws  upon the artistry of Indonesian design, inviting quiet indulgence. Step  onto the balcony to absorb Bali’s verdant beauty and vibrant blooms,  gaze over the Indian ocean in an Ocean View, or step from your terrace  directly into the turquoise pool with the Lagoon Access. A king bed  offers serene comfort, while unlimited laundry, all‑day breakfast, and  assistance from a Regent Experience Agent elevate your stay. 
-            -   heading: ONE & TWO BEDROOM SUITES
-                img: /uploads/studio-suites.jpg
-                rooms:
                     -
-                        name: Ocean View
+                        name: Ocean View King
                         size: 76
                         bed-size: KING BED
-                        sleeps: 2                      
+                        sleeps: 2
+                        extra-feature:
+                            - additional Living area
+                            - Ocean view
+                        content: >-
+                            Gaze across the Indian Ocean from your private
+                            balcony. Indoors find a king bed and a serene
+                            bathroom with a rain shower and teak bathtub. Enjoy
+                            thoughtful moments with a complimentary refreshment
+                            gallery.
+                    -
+                        name: Lagoon Access Twin
+                        size: 120
+                        bed-size: king bed-size
+                        sleeps: 2
                         extra-feature:
                             - additional Living area
                             - Ocean view
@@ -84,78 +71,172 @@ blocks:
                             all‑day breakfast, and  assistance from a Regent
                             Experience Agent elevate your stay.&nbsp;
                     -
-                        name: Garden View King Room
+                        name: Studio Suite King
                         size: 120
                         bed-size: king bed-size
-                        sleeps: 2                      
+                        sleeps: 2
                         extra-feature:
-                        - additional Living area
-                        - Ocean view
-                        content: "Positioned within lush tropical landscapes, the Studio Suite draws  upon the artistry of Indonesian design, inviting quiet indulgence. Step  onto the balcony to absorb Bali’s verdant beauty and vibrant blooms,  gaze over the Indian ocean in an Ocean View, or step from your terrace  directly into the turquoise pool with the Lagoon Access. A king bed  offers serene comfort, while unlimited laundry, all‑day breakfast, and  assistance from a Regent Experience Agent elevate your stay.\_"
-                    -
-                        name: Lagoon View King Room
-                        size: 120
-                        bed-size: king bed-size
-                        sleeps: 2                      
-                        extra-feature:
-                        - additional Living area
-                        - Ocean view
-                        content: "Positioned within lush tropical landscapes, the Studio Suite draws  upon the artistry of Indonesian design, inviting quiet indulgence. Step  onto the balcony to absorb Bali’s verdant beauty and vibrant blooms,  gaze over the Indian ocean in an Ocean View, or step from your terrace  directly into the turquoise pool with the Lagoon Access. A king bed  offers serene comfort, while unlimited laundry, all‑day breakfast, and  assistance from a Regent Experience Agent elevate your stay.\_"
+                            - additional Living area
+                            - Ocean view
+                        content: >-
+                            Positioned within lush tropical landscapes, the
+                            Studio Suite draws  upon the artistry of Indonesian
+                            design, inviting quiet indulgence. Step  onto the
+                            balcony to absorb Bali’s verdant beauty and vibrant
+                            blooms,  gaze over the Indian ocean in an Ocean
+                            View, or step from your terrace  directly into the
+                            turquoise pool with the Lagoon Access. A king bed 
+                            offers serene comfort, while unlimited laundry,
+                            all‑day breakfast, and  assistance from a Regent
+                            Experience Agent elevate your stay.&nbsp;
             -
-                heading: ONE & TWO BEDROOM SUITES
+                heading: ONE BEDROOM SUITES
+                img: /uploads/one-bedroom-suites.jpg
+                rooms:
+                    -
+                        name: One Bedroom Ocean View King
+                        size: 86
+                        bed-size: KING BED
+                        sleeps: 3
+                        extra-feature:
+                            - ADDITIONAL LIVING AREA
+                            - OCEAN VIEW
+                        content: >-
+                            Perched above the coastline, this One Bedroom Suite
+                            pairs tranquil seclusion with sweeping ocean views.
+                            A spacious living room opens onto a balcony, ideal
+                            for soaking in the surroundings. With two nights or
+                            more enjoy a 60-minute signature massage for two.
+                    -
+                        name: Lagoon Access King
+                        size: 120
+                        bed-size: king bed-size
+                        sleeps: 2
+                        extra-feature:
+                            - additional Living area
+                            - Ocean view
+                        content: >-
+                            Positioned within lush tropical landscapes, the
+                            Studio Suite draws  upon the artistry of Indonesian
+                            design, inviting quiet indulgence. Step  onto the
+                            balcony to absorb Bali’s verdant beauty and vibrant
+                            blooms,  gaze over the Indian ocean in an Ocean
+                            View, or step from your terrace  directly into the
+                            turquoise pool with the Lagoon Access. A king bed 
+                            offers serene comfort, while unlimited laundry,
+                            all‑day breakfast, and  assistance from a Regent
+                            Experience Agent elevate your stay.&nbsp;
+                    -
+                        name: One Bedroom King
+                        size: 120
+                        bed-size: king bed-size
+                        sleeps: 2
+                        extra-feature:
+                            - additional Living area
+                            - Ocean view
+                        content: >-
+                            Positioned within lush tropical landscapes, the
+                            Studio Suite draws  upon the artistry of Indonesian
+                            design, inviting quiet indulgence. Step  onto the
+                            balcony to absorb Bali’s verdant beauty and vibrant
+                            blooms,  gaze over the Indian ocean in an Ocean
+                            View, or step from your terrace  directly into the
+                            turquoise pool with the Lagoon Access. A king bed 
+                            offers serene comfort, while unlimited laundry,
+                            all‑day breakfast, and  assistance from a Regent
+                            Experience Agent elevate your stay.&nbsp;
+            -
+                heading: TWO BEDROOM SUITES
                 img: /uploads/KC-Regent-Arch-1.jpg
                 rooms:
-                    - name: Ocean View King Room
-                      size: 120
-                      bed-size: king bed-size
-                      sleeps: 2
-                      extra-feature:
-                        - additional Living area
-                        - Ocean view
-                      content: Positioned within lush tropical landscapes, the Studio Suite draws  upon the artistry of Indonesian design, inviting quiet indulgence. Step  onto the balcony to absorb Bali’s verdant beauty and vibrant blooms,  gaze over the Indian ocean in an Ocean View, or step from your terrace  directly into the turquoise pool with the Lagoon Access. A king bed  offers serene comfort, while unlimited laundry, all‑day breakfast, and  assistance from a Regent Experience Agent elevate your stay. 
-                    - name: Garden View King Room
-                      size: 120
-                      bed-size: king bed-size
-                      sleeps: 2
-                      extra-feature:
-                        - additional Living area
-                        - Ocean view
-                      content: Positioned within lush tropical landscapes, the Studio Suite draws  upon the artistry of Indonesian design, inviting quiet indulgence. Step  onto the balcony to absorb Bali’s verdant beauty and vibrant blooms,  gaze over the Indian ocean in an Ocean View, or step from your terrace  directly into the turquoise pool with the Lagoon Access. A king bed  offers serene comfort, while unlimited laundry, all‑day breakfast, and  assistance from a Regent Experience Agent elevate your stay. 
-                    - name: Lagoon View King Room
-                      size: 120
-                      bed-size: king bed-size
-                      sleeps: 2
-                      extra-feature:
-                        - additional Living area
-                        - Ocean view
-                      content: Positioned within lush tropical landscapes, the Studio Suite draws  upon the artistry of Indonesian design, inviting quiet indulgence. Step  onto the balcony to absorb Bali’s verdant beauty and vibrant blooms,  gaze over the Indian ocean in an Ocean View, or step from your terrace  directly into the turquoise pool with the Lagoon Access. A king bed  offers serene comfort, while unlimited laundry, all‑day breakfast, and  assistance from a Regent Experience Agent elevate your stay. 
                     -
                         name: Ocean View King Room
                         size: 120
                         bed-size: king bed-size
-                        sleeps: 2                      
+                        sleeps: 2
                         extra-feature:
-                        - additional Living area
-                        - Ocean view
+                            - additional Living area
+                            - Ocean view
                         content: "Positioned within lush tropical landscapes, the Studio Suite draws  upon the artistry of Indonesian design, inviting quiet indulgence. Step  onto the balcony to absorb Bali’s verdant beauty and vibrant blooms,  gaze over the Indian ocean in an Ocean View, or step from your terrace  directly into the turquoise pool with the Lagoon Access. A king bed  offers serene comfort, while unlimited laundry, all‑day breakfast, and  assistance from a Regent Experience Agent elevate your stay.\_"
                     -
                         name: Garden View King Room
                         size: 120
                         bed-size: king bed-size
-                        sleeps: 2                      
+                        sleeps: 2
                         extra-feature:
-                        - additional Living area
-                        - Ocean view
+                            - additional Living area
+                            - Ocean view
                         content: "Positioned within lush tropical landscapes, the Studio Suite draws  upon the artistry of Indonesian design, inviting quiet indulgence. Step  onto the balcony to absorb Bali’s verdant beauty and vibrant blooms,  gaze over the Indian ocean in an Ocean View, or step from your terrace  directly into the turquoise pool with the Lagoon Access. A king bed  offers serene comfort, while unlimited laundry, all‑day breakfast, and  assistance from a Regent Experience Agent elevate your stay.\_"
                     -
                         name: Lagoon View King Room
                         size: 120
                         bed-size: king bed-size
-                        sleeps: 2                      
+                        sleeps: 2
                         extra-feature:
-                        - additional Living area
-                        - Ocean view
+                            - additional Living area
+                            - Ocean view
                         content: "Positioned within lush tropical landscapes, the Studio Suite draws  upon the artistry of Indonesian design, inviting quiet indulgence. Step  onto the balcony to absorb Bali’s verdant beauty and vibrant blooms,  gaze over the Indian ocean in an Ocean View, or step from your terrace  directly into the turquoise pool with the Lagoon Access. A king bed  offers serene comfort, while unlimited laundry, all‑day breakfast, and  assistance from a Regent Experience Agent elevate your stay.\_"
+                    -
+                        name: Ocean View King Room
+                        size: 120
+                        bed-size: king bed-size
+                        sleeps: 2
+                        extra-feature:
+                            - additional Living area
+                            - Ocean view
+                        content: "Positioned within lush tropical landscapes, the Studio Suite draws  upon the artistry of Indonesian design, inviting quiet indulgence. Step  onto the balcony to absorb Bali’s verdant beauty and vibrant blooms,  gaze over the Indian ocean in an Ocean View, or step from your terrace  directly into the turquoise pool with the Lagoon Access. A king bed  offers serene comfort, while unlimited laundry, all‑day breakfast, and  assistance from a Regent Experience Agent elevate your stay.\_"
+                    -
+                        name: Garden View King Room
+                        size: 120
+                        bed-size: king bed-size
+                        sleeps: 2
+                        extra-feature:
+                            - additional Living area
+                            - Ocean view
+                        content: "Positioned within lush tropical landscapes, the Studio Suite draws  upon the artistry of Indonesian design, inviting quiet indulgence. Step  onto the balcony to absorb Bali’s verdant beauty and vibrant blooms,  gaze over the Indian ocean in an Ocean View, or step from your terrace  directly into the turquoise pool with the Lagoon Access. A king bed  offers serene comfort, while unlimited laundry, all‑day breakfast, and  assistance from a Regent Experience Agent elevate your stay.\_"
+                    -
+                        name: Lagoon View King Room
+                        size: 120
+                        bed-size: king bed-size
+                        sleeps: 2
+                        extra-feature:
+                            - additional Living area
+                            - Ocean view
+                        content: "Positioned within lush tropical landscapes, the Studio Suite draws  upon the artistry of Indonesian design, inviting quiet indulgence. Step  onto the balcony to absorb Bali’s verdant beauty and vibrant blooms,  gaze over the Indian ocean in an Ocean View, or step from your terrace  directly into the turquoise pool with the Lagoon Access. A king bed  offers serene comfort, while unlimited laundry, all‑day breakfast, and  assistance from a Regent Experience Agent elevate your stay.\_"
+            -
+                heading: PREMIUM ONE BEDROOM SUITES
+                img: ''
+                rooms:
+                    -
+                        name: ''
+                        size: 0
+                        bed-size: ''
+                        sleeps: 0
+                        extra-feature:
+                            - ''
+                        content: ''
+            -
+                heading: PRIVATE VILLAS
+                img: ''
+                rooms:
+                    -
+                        name: ''
+                        size: 0
+                        bed-size: ''
+                        sleeps: 0
+                        extra-feature: []
+                        content: ''
+            -
+                heading: PENTHOUSE
+                img: ''
+                rooms:
+                    -
+                        name: ''
+                        size: 0
+                        bed-size: ''
+                        sleeps: 0
+                        extra-feature: []
+                        content: ''
         color-scheme: mint-200
         min-height: 50vh
     -
