Updated 4 files via CloudCannon.

--- a/SUITES-and-VILLAS.html
+++ b/SUITES-and-VILLAS.html
@@ -147,83 +147,84 @@ blocks:
                             Experience Agent elevate your stay.&nbsp;
             -
                 heading: TWO BEDROOM SUITES
-                img: /uploads/KC-Regent-Arch-1.jpg
+                img: /uploads/two-bedroom-suites.jpg
                 rooms:
                     -
-                        name: Ocean View King Room
-                        size: 120
-                        bed-size: king bed-size
-                        sleeps: 2
+                        name: Two Bedroom Lagoon Access
+                        size: 174
+                        bed-size: KING BED & TWIN BEDS
+                        sleeps: 6
                         extra-feature:
-                            - additional Living area
-                            - Ocean view
-                        content: "Positioned within lush tropical landscapes, the Studio Suite draws  upon the artistry of Indonesian design, inviting quiet indulgence. Step  onto the balcony to absorb Bali’s verdant beauty and vibrant blooms,  gaze over the Indian ocean in an Ocean View, or step from your terrace  directly into the turquoise pool with the Lagoon Access. A king bed  offers serene comfort, while unlimited laundry, all‑day breakfast, and  assistance from a Regent Experience Agent elevate your stay.\_"
+                            - ADDITIONAL LIVING AREA
+                            - POOL VIEW
+                        content: >-
+                            Tailored for families, this spacious suite features
+                            two bedrooms and seamless access to the tranquil
+                            lagoon. Indoor and outdoor living blend with
+                            generous spaces, private terraces, and bathrooms
+                            that reflect Bali’s artisanal heritage.
                     -
-                        name: Garden View King Room
+                        name: Two Bedroom Suite
                         size: 120
                         bed-size: king bed-size
                         sleeps: 2
                         extra-feature:
                             - additional Living area
                             - Ocean view
-                        content: "Positioned within lush tropical landscapes, the Studio Suite draws  upon the artistry of Indonesian design, inviting quiet indulgence. Step  onto the balcony to absorb Bali’s verdant beauty and vibrant blooms,  gaze over the Indian ocean in an Ocean View, or step from your terrace  directly into the turquoise pool with the Lagoon Access. A king bed  offers serene comfort, while unlimited laundry, all‑day breakfast, and  assistance from a Regent Experience Agent elevate your stay.\_"
-                    -
-                        name: Lagoon View King Room
-                        size: 120
-                        bed-size: king bed-size
-                        sleeps: 2
-                        extra-feature:
-                            - additional Living area
-                            - Ocean view
-                        content: "Positioned within lush tropical landscapes, the Studio Suite draws  upon the artistry of Indonesian design, inviting quiet indulgence. Step  onto the balcony to absorb Bali’s verdant beauty and vibrant blooms,  gaze over the Indian ocean in an Ocean View, or step from your terrace  directly into the turquoise pool with the Lagoon Access. A king bed  offers serene comfort, while unlimited laundry, all‑day breakfast, and  assistance from a Regent Experience Agent elevate your stay.\_"
-                    -
-                        name: Ocean View King Room
-                        size: 120
-                        bed-size: king bed-size
-                        sleeps: 2
-                        extra-feature:
-                            - additional Living area
-                            - Ocean view
-                        content: "Positioned within lush tropical landscapes, the Studio Suite draws  upon the artistry of Indonesian design, inviting quiet indulgence. Step  onto the balcony to absorb Bali’s verdant beauty and vibrant blooms,  gaze over the Indian ocean in an Ocean View, or step from your terrace  directly into the turquoise pool with the Lagoon Access. A king bed  offers serene comfort, while unlimited laundry, all‑day breakfast, and  assistance from a Regent Experience Agent elevate your stay.\_"
-                    -
-                        name: Garden View King Room
-                        size: 120
-                        bed-size: king bed-size
-                        sleeps: 2
-                        extra-feature:
-                            - additional Living area
-                            - Ocean view
-                        content: "Positioned within lush tropical landscapes, the Studio Suite draws  upon the artistry of Indonesian design, inviting quiet indulgence. Step  onto the balcony to absorb Bali’s verdant beauty and vibrant blooms,  gaze over the Indian ocean in an Ocean View, or step from your terrace  directly into the turquoise pool with the Lagoon Access. A king bed  offers serene comfort, while unlimited laundry, all‑day breakfast, and  assistance from a Regent Experience Agent elevate your stay.\_"
-                    -
-                        name: Lagoon View King Room
-                        size: 120
-                        bed-size: king bed-size
-                        sleeps: 2
-                        extra-feature:
-                            - additional Living area
-                            - Ocean view
-                        content: "Positioned within lush tropical landscapes, the Studio Suite draws  upon the artistry of Indonesian design, inviting quiet indulgence. Step  onto the balcony to absorb Bali’s verdant beauty and vibrant blooms,  gaze over the Indian ocean in an Ocean View, or step from your terrace  directly into the turquoise pool with the Lagoon Access. A king bed  offers serene comfort, while unlimited laundry, all‑day breakfast, and  assistance from a Regent Experience Agent elevate your stay.\_"
+                        content: >-
+                            Positioned within lush tropical landscapes, the
+                            Studio Suite draws  upon the artistry of Indonesian
+                            design, inviting quiet indulgence. Step  onto the
+                            balcony to absorb Bali’s verdant beauty and vibrant
+                            blooms,  gaze over the Indian ocean in an Ocean
+                            View, or step from your terrace  directly into the
+                            turquoise pool with the Lagoon Access. A king bed 
+                            offers serene comfort, while unlimited laundry,
+                            all‑day breakfast, and  assistance from a Regent
+                            Experience Agent elevate your stay.&nbsp;
             -
                 heading: PREMIUM ONE BEDROOM SUITES
-                img: ''
+                img: /uploads/premium-one-bedroom-suites.jpg
                 rooms:
                     -
-                        name: ''
+                        name: Premium One Bedroom Ocean View
+                        size: 108
+                        bed-size: KING BED
+                        sleeps: 4
+                        extra-feature:
+                            - additional Living area
+                            - Ocean view
+                        content: >-
+                            With panoramic views of the Indian Ocean, this
+                            generously sized suite captures the essence of
+                            elevated island living. A private terrace and
+                            light-filled interiors include a separate lounge,
+                            king bed, and a bathroom that pays homage to
+                            Balinese craft and detail.
+                    -
+                        name: Lagoon Access King
                         size: 0
                         bed-size: ''
                         sleeps: 0
                         extra-feature:
                             - ''
                         content: ''
-            -
-                heading: PRIVATE VILLAS
-                img: ''
-                rooms:
                     -
-                        name: ''
+                        name: Garden View King
                         size: 0
                         bed-size: ''
                         sleeps: 0
+                        extra-feature: []
+                        content: ''
+            -
+                heading: PRIVATE VILLAS
+                img: /uploads/private-villas.jpg
+                rooms:
+                    -
+                        name: Beachfront Private Pool Villa
+                        size: 327
+                        bed-size: KING BED
+                        sleeps: 3
                         extra-feature: []
                         content: ''
             -
