--- a/SUITES-and-VILLAS.html
+++ b/SUITES-and-VILLAS.html
@@ -207,14 +207,17 @@ blocks:
                         bed-size: ''
                         sleeps: 0
                         extra-feature:
-                            - ''
+                            - additional Living area
+                            - Ocean view
                         content: ''
                     -
                         name: Garden View King
                         size: 0
                         bed-size: ''
                         sleeps: 0
-                        extra-feature: []
+                        extra-feature:
+                            - additional Living area
+                            - Ocean view
                         content: ''
             -
                 heading: PRIVATE VILLAS
@@ -225,7 +228,9 @@ blocks:
                         size: 327
                         bed-size: KING BED
                         sleeps: 3
-                        extra-feature: []
+                        extra-feature:
+                            - additional Living area
+                            - Ocean view
                         content: ''
             -
                 heading: PENTHOUSE
@@ -236,7 +241,9 @@ blocks:
                         size: 0
                         bed-size: ''
                         sleeps: 0
-                        extra-feature: []
+                        extra-feature:
+                            - additional Living area
+                            - Ocean view
                         content: ''
         color-scheme: mint-200
         min-height: 50vh
