Updated 1 file via CloudCannon.

--- a/SUITES-and-VILLAS.html
+++ b/SUITES-and-VILLAS.html
@@ -226,7 +226,13 @@ blocks:
                         bed-size: KING BED
                         sleeps: 3
                         extra-feature: []
-                        content: ''
+                        content: >-
+                            Awaken to sweeping ocean views from the master
+                            bedroom, living room, and your private 30 sqm pool.
+                            The ensuite bathroom features indoor and outdoor
+                            rain showers, and a beautiful teak bathtub. Step
+                            into your outdoor living space, the rhythm of the
+                            waves becomes a backdrop to your peaceful haven.
             -
                 heading: PENTHOUSE
                 img: ''
