Updated 2 files via CloudCannon.

--- a/SUITES-and-VILLAS.html
+++ b/SUITES-and-VILLAS.html
@@ -229,22 +229,34 @@ blocks:
                         bed-size: KING BED
                         sleeps: 3
                         extra-feature:
-                            - additional Living area
-                            - Ocean view
-                        content: ''
+                            - Living, Dining and Kitchen Areas
+                            - Beachfront
+                        content: >-
+                            Awaken to sweeping ocean views from the master
+                            bedroom, living room, and your private 30 sqm pool.
+                            The ensuite bathroom features indoor and outdoor
+                            rain showers, and a beautiful teak bathtub. Step
+                            into your outdoor living space, the rhythm of the
+                            waves becomes a backdrop to your peaceful haven.
             -
                 heading: PENTHOUSE
-                img: ''
+                img: /uploads/penthouse.jpg
                 rooms:
                     -
-                        name: ''
-                        size: 0
-                        bed-size: ''
-                        sleeps: 0
+                        name: Oceanfront Private Pool Penthouse
+                        size: 618
+                        bed-size: 'KING BED & Twin Beds '
+                        sleeps: 6
                         extra-feature:
-                            - additional Living area
-                            - Ocean view
-                        content: ''
+                            - Living, Dining and Kitchen Areas
+                            - Ocean front
+                        content: >-
+                            The pinnacle of island living, the two-bedroom
+                            penthouse offers uninterrupted ocean views and a
+                            private pool above the shoreline. Each bedroom is a
+                            peaceful retreat with a teak bathtub, rainfall
+                            shower, and refined ensuite, while the terrace and
+                            cabana set the stage for sunset views.
         color-scheme: mint-200
         min-height: 50vh
     -
