Updated 1 file via CloudCannon.

--- a/SUITES-and-VILLAS.html
+++ b/SUITES-and-VILLAS.html
@@ -238,6 +238,14 @@ blocks:
                             rain showers, and a beautiful teak bathtub. Step
                             into your outdoor living space, the rhythm of the
                             waves becomes a backdrop to your peaceful haven.
+                    -
+                        name: Garden Pool Villa
+                        size: 0
+                        bed-size: ''
+                        sleeps: 0
+                        extra-feature:
+                            - ''
+                        content: ''
             -
                 heading: PENTHOUSE
                 img: /uploads/penthouse.jpg
