--- a/dinning-beach-house.html
+++ b/dinning-beach-house.html
@@ -3,85 +3,138 @@ layout: default
 blocks:
     -
         _id: banner-video
-        block-content-html: >-
-            <img src="/uploads/bali-canggu.svg" class="w-4/5 sm:w-1/2 mx-auto">
+        block-content-html: ''
         videos:
             -
-                video_path: /uploads/test-50k-kbs-wave-hb.mp4
-                video_type: mp4
-        placeholder_image: /uploads/videos/ocean-cover.jpg
+                video_path:
+                video_type:
+        placeholder_image: /uploads/dining-beach.jpg
         controls: false
         autoplay: true
         text-alignment: center
         vert-alignment: middle
-        overlay-opacity: 0.2
+        overlay-opacity: 0op
         min-height: 90vh
         color-scheme: dark
     -
         _id: text-block-top-overlap
         block-content-html: >-
-            <h3>REGENT BALI CANGGU</h3><h2 class="heading-lg">A coastal haven where Bali's spirit unravels</h2><p>On Canggu Beach, surfers are silhouetted in the morning sun, boards  under arms ready to take on Bali's famous reef breaks. Watching the  waves, listening to the call of the Indian Ocean, you might catch the  scent of incense or the melody of the gamelan emitting from Pura Batu  Mejan, a centuries old sea temple set on rock as black as jet. A blessed way to begin each day.</p><div style="max-width:25rem; margin:auto; margin-bottom:2rem;"><h3 class="mt-8">A METICULOUSLY CURATED RESORT DESERVES AN INTENTIONALLY CRAFTED WEBSITE. LET US BUILD ONE FOR YOU.</h3></div> <a href="/uploads/KC-proposal.pdf" class="button-featured">DOWNLOAD PROPOSAL</a>
+            <h3>REGENT BALI CANGGU</h3><h2 class="heading-lg">A coastal haven
+            where Bali's spirit unravels</h2><p>On Canggu Beach, surfers are
+            silhouetted in the morning sun, boards  under arms ready to take on
+            Bali's famous reef breaks. Watching the  waves, listening to the
+            call of the Indian Ocean, you might catch the  scent of incense or
+            the melody of the gamelan emitting from Pura Batu  Mejan, a
+            centuries old sea temple set on rock as black as jet. A blessed way
+            to begin each day.</p><div style="max-width:25rem; margin:auto;
+            margin-bottom:2rem;"><h3 class="mt-8">A METICULOUSLY CURATED RESORT
+            DESERVES AN INTENTIONALLY CRAFTED WEBSITE. LET US BUILD ONE FOR
+            YOU.</h3></div> <a href="/uploads/KC-proposal.pdf"
+            class="button-featured">DOWNLOAD PROPOSAL</a>
         overlay-color-scheme: mint-400
         content-max-width: 35rem
         text-alignment: center
         color-scheme: base
         min-height: 50vh
-    -   
+    -
         _id: split-banner-slider
-        content: 
-            subHeading: "TARU"
-            heading: "TARU"
-            p-text: <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim  veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea  commodo consequat.</p><p>Open 8am - 9pm everyday.</p>
+        content:
+            subHeading: TARU
+            heading: TARU
+            p-text: >-
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                do eiusmod  tempor incididunt ut labore et dolore magna aliqua.
+                Ut enim ad minim  veniam, quis nostrud exercitation ullamco
+                laboris nisi ut aliquip ex ea  commodo consequat.</p><p>Open 8am
+                - 9pm everyday.</p>
         carousel:
-            dots: true
             desktop-image-position: right
+            dots: true
             slides:
-                - img: /uploads/KC-Regent-slider-11.jpg
-                  alt: "Regent Bali Canggu"
-                - img: /uploads/KC-Regent-slider-10.jpg
-                  alt: "Regent Bali Canggu"
-                - img: /uploads/KC-Regent-slider-9.jpg
-                  alt: "Regent Bali Canggu"
-                - img: /uploads/KC-Regent-slider-8.jpg
-                  alt: "Regent Bali Canggu"
-                - img: /uploads/KC-Regent-slider-7.jpg
-                  alt: "Regent Bali Canggu"
-                - img: /uploads/KC-Regent-slider-6.jpg
-                  alt: "Regent Bali Canggu"
+                -
+                    img: /uploads/KC-Regent-slider-11.jpg
+                    alt: Regent Bali Canggu
+                -
+                    img: /uploads/KC-Regent-slider-10.jpg
+                    alt: Regent Bali Canggu
+                -
+                    img: /uploads/KC-Regent-slider-9.jpg
+                    alt: Regent Bali Canggu
+                -
+                    img: /uploads/KC-Regent-slider-8.jpg
+                    alt: Regent Bali Canggu
+                -
+                    img: /uploads/KC-Regent-slider-7.jpg
+                    alt: Regent Bali Canggu
+                -
+                    img: /uploads/KC-Regent-slider-6.jpg
+                    alt: Regent Bali Canggu
         color-scheme: base
+        scheme-padding: small-padding
+        scheme-max-width: l
     -
         _id: events-block
         location: Beach House
         events:
-            - 
+            -
                 heading: DJ Scott Bruce
                 sub-heading: Resident DJ
-                full-description: <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod  tempor incididunt ut.</p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod  tempor incididunt ut.</p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod  tempor incididunt ut.</p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod  tempor incididunt ut.</p>
-                short-description: 'Celebrate the year’s end with exquisite dining and serene moments, embracing the art of graceful celebration.'
+                full-description: >-
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod  tempor incididunt ut.</p><p>Lorem ipsum
+                    dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
+                    tempor incididunt ut.</p><p>Lorem ipsum dolor sit amet,
+                    consectetur adipiscing elit, sed do eiusmod  tempor
+                    incididunt ut.</p><p>Lorem ipsum dolor sit amet, consectetur
+                    adipiscing elit, sed do eiusmod  tempor incididunt ut.</p>
+                short-description: >-
+                    Celebrate the year’s end with exquisite dining and serene
+                    moments, embracing the art of graceful celebration.
                 featured-image: /uploads/videos/ocean-cover.jpg
                 button-link:
                 button-text: book a table
-            - 
+            -
                 heading: DJ Scott Bruce
                 sub-heading: Resident DJ
-                full-description: <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod  tempor incididunt ut.</p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod  tempor incididunt ut.</p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod  tempor incididunt ut.</p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod  tempor incididunt ut.</p>
-                short-description: 'Celebrate the year’s end with exquisite dining and serene moments, embracing the art of graceful celebration.'
-                featured-image: /uploads/videos/ocean-cover.jpg   
+                full-description: >-
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod  tempor incididunt ut.</p><p>Lorem ipsum
+                    dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
+                    tempor incididunt ut.</p><p>Lorem ipsum dolor sit amet,
+                    consectetur adipiscing elit, sed do eiusmod  tempor
+                    incididunt ut.</p><p>Lorem ipsum dolor sit amet, consectetur
+                    adipiscing elit, sed do eiusmod  tempor incididunt ut.</p>
+                short-description: >-
+                    Celebrate the year’s end with exquisite dining and serene
+                    moments, embracing the art of graceful celebration.
+                featured-image: /uploads/videos/ocean-cover.jpg
                 button-link:
                 button-text: discover more
-            - 
+            -
                 heading: DJ Scott Bruce
                 sub-heading: Resident DJ
-                full-description: <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod  tempor incididunt ut.</p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod  tempor incididunt ut.</p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod  tempor incididunt ut.</p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod  tempor incididunt ut.</p>
-                short-description: 'Celebrate the year’s end with exquisite dining and serene moments, embracing the art of graceful celebration.'
-                featured-image: /uploads/videos/ocean-cover.jpg   
+                full-description: >-
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod  tempor incididunt ut.</p><p>Lorem ipsum
+                    dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
+                    tempor incididunt ut.</p><p>Lorem ipsum dolor sit amet,
+                    consectetur adipiscing elit, sed do eiusmod  tempor
+                    incididunt ut.</p><p>Lorem ipsum dolor sit amet, consectetur
+                    adipiscing elit, sed do eiusmod  tempor incididunt ut.</p>
+                short-description: >-
+                    Celebrate the year’s end with exquisite dining and serene
+                    moments, embracing the art of graceful celebration.
+                featured-image: /uploads/videos/ocean-cover.jpg
                 button-link:
                 button-text: discover more
         color-scheme: mint-200
-
 seo:
     title: Regent Website Proposal | Kelapa Creative
-    description: Website Proposal by Kelapa Creative for Regent Bali Canggu, with a strong understanding of both the Regent brand & the resort itself, we bring a depth of knowledge that allows us to thoughtfully create a digital experience that captivates and enchants.
+    description: >-
+        Website Proposal by Kelapa Creative for Regent Bali Canggu, with a
+        strong understanding of both the Regent brand & the resort itself, we
+        bring a depth of knowledge that allows us to thoughtfully create a
+        digital experience that captivates and enchants.
     image:
     favicon:
     index: true
