Updated 1 file via CloudCannon.

--- a/dinning-beach-house.html
+++ b/dinning-beach-house.html
@@ -18,23 +18,11 @@ blocks:
         color-scheme: dark
     -
         _id: text-block-top-overlap
-        block-content-html: >-
-            <h3>REGENT BALI CANGGU</h3><h2 class="heading-lg">A coastal haven
-            where Bali's spirit unravels</h2><p>On Canggu Beach, surfers are
-            silhouetted in the morning sun, boards  under arms ready to take on
-            Bali's famous reef breaks. Watching the  waves, listening to the
-            call of the Indian Ocean, you might catch the  scent of incense or
-            the melody of the gamelan emitting from Pura Batu  Mejan, a
-            centuries old sea temple set on rock as black as jet. A blessed way
-            to begin each day.</p><div style="max-width:25rem; margin:auto;
-            margin-bottom:2rem;"><h3 class="mt-8">A METICULOUSLY CURATED RESORT
-            DESERVES AN INTENTIONALLY CRAFTED WEBSITE. LET US BUILD ONE FOR
-            YOU.</h3></div> <a href="/uploads/KC-proposal.pdf"
-            class="button-featured">DOWNLOAD PROPOSAL</a>
-        overlay-color-scheme: mint-400
+        block-content-html: "<h3>RESTUARANTS &amp; DINING</h3><h2 class=\"heading-lg\">Beach House</h2><p>The latest beachfront destination set along the sun-drenched shores of Canggu, Beach House blends coastal charm with refined elegance—and mesmerizing views directly on the world-famous Echo surf break.\L\L</p><p>Whether you're here to sip artisanal cocktails by the infinity pool, savour fresh locally sourced coastal cuisine, or unwind to sunset sounds, Beach House is your barefoot escape to Bali's effortlessly cool surfside lifestyle. Perfect for intimate gatherings, vibrant events, or serene solo moments—this is Canggu's new home of golden hours and ocean breeze.</p>"
+        overlay-color-scheme: dark
         content-max-width: 35rem
         text-alignment: center
-        color-scheme: base
+        color-scheme: dark
         min-height: 50vh
     -
         _id: split-banner-slider
