Updated 1 file via CloudCannon.

--- a/dinning-beach-house.html
+++ b/dinning-beach-house.html
@@ -30,11 +30,8 @@ blocks:
             subHeading: TARU
             heading: TARU
             p-text: >-
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                do eiusmod  tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim  veniam, quis nostrud exercitation ullamco
-                laboris nisi ut aliquip ex ea  commodo consequat.</p><p>Open 8am
-                - 9pm everyday.</p>
+                <h3 class="sub-heading">CUISINE</h3><p>Cosstal</p><h3
+                class="sub-heading">CUISINE</h3><p>Cosstal</p>
         carousel:
             desktop-image-position: right
             dots: true
