Updated 1 file via CloudCannon.

--- a/dinning-beach-house.html
+++ b/dinning-beach-house.html
@@ -27,11 +27,14 @@ blocks:
     -
         _id: split-banner-slider
         content:
-            subHeading: TARU
-            heading: TARU
+            subHeading:
+            heading:
             p-text: >-
                 <h3 class="sub-heading">CUISINE</h3><p>Cosstal</p><h3
-                class="sub-heading">CUISINE</h3><p>Cosstal</p>
+                class="sub-heading">LOCATION</h3><p>Beachfront</p><h3
+                class="sub-heading">TEL.</h3><p>+62 361 2019999</p><h3
+                class="sub-heading">HOURS</h3><p>8am - 11pm</p><h3
+                class="sub-heading">EMAIL</h3><p>dining.regentbali@ihg.com</p>
         carousel:
             desktop-image-position: right
             dots: true
