Updated 3 files via CloudCannon.

--- a/dinning-beach-house.html
+++ b/dinning-beach-house.html
@@ -40,23 +40,11 @@ blocks:
             dots: true
             slides:
                 -
-                    img: /uploads/KC-Regent-slider-11.jpg
-                    alt: Regent Bali Canggu
+                    img: /uploads/dining-beach-house1.jpg
+                    alt: Dining - Beach House
                 -
-                    img: /uploads/KC-Regent-slider-10.jpg
-                    alt: Regent Bali Canggu
-                -
-                    img: /uploads/KC-Regent-slider-9.jpg
-                    alt: Regent Bali Canggu
-                -
-                    img: /uploads/KC-Regent-slider-8.jpg
-                    alt: Regent Bali Canggu
-                -
-                    img: /uploads/KC-Regent-slider-7.jpg
-                    alt: Regent Bali Canggu
-                -
-                    img: /uploads/KC-Regent-slider-6.jpg
-                    alt: Regent Bali Canggu
+                    img: /uploads/dining-beach-house2.jpg
+                    alt: Dining - Beach House
         color-scheme: base
         scheme-padding: small-padding
         scheme-max-width: l
