Updated 1 file via CloudCannon.

--- a/dinning-beach-house.html
+++ b/dinning-beach-house.html
@@ -30,7 +30,7 @@ blocks:
             subHeading:
             heading:
             p-text: >-
-                <h3 class="sub-heading">CUISINE</h3><p>Cosstal</p><h3
+                <h3 class="sub-heading">CUISINE</h3><p>Coastal</p><h3
                 class="sub-heading">LOCATION</h3><p>Beachfront</p><h3
                 class="sub-heading">TEL.</h3><p>+62 361 2019999</p><h3
                 class="sub-heading">HOURS</h3><p>8am - 11pm</p><h3
