Updated 2 files via CloudCannon.

--- a/dinning-beach-house.html
+++ b/dinning-beach-house.html
@@ -66,7 +66,7 @@ blocks:
                 short-description: >-
                     Celebrate the year’s end with exquisite dining and serene
                     moments, embracing the art of graceful celebration.
-                featured-image: /uploads/videos/ocean-cover.jpg
+                featured-image: /uploads/dj-scott-bruce.jpg
                 button-link:
                 button-text: book a table
             -
