Updated 1 file via CloudCannon.

--- a/dinning-beach-house.html
+++ b/dinning-beach-house.html
@@ -70,7 +70,7 @@ blocks:
                 button-link:
                 button-text: book a table
             -
-                heading: DJ Scott Bruce
+                heading: xyz
                 sub-heading: Resident DJ
                 full-description: >-
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
@@ -83,11 +83,11 @@ blocks:
                 short-description: >-
                     Celebrate the year’s end with exquisite dining and serene
                     moments, embracing the art of graceful celebration.
-                featured-image: /uploads/videos/ocean-cover.jpg
+                featured-image: /uploads/elegancy-at-year-s-end.jpg
                 button-link:
                 button-text: discover more
             -
-                heading: DJ Scott Bruce
+                heading: xyz
                 sub-heading: Resident DJ
                 full-description: >-
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
@@ -100,7 +100,7 @@ blocks:
                 short-description: >-
                     Celebrate the year’s end with exquisite dining and serene
                     moments, embracing the art of graceful celebration.
-                featured-image: /uploads/videos/ocean-cover.jpg
+                featured-image: /uploads/pool-bar2.jpg
                 button-link:
                 button-text: discover more
         color-scheme: mint-300
