Updated 1 file via CloudCannon.

--- a/dinning-taru.html
+++ b/dinning-taru.html
@@ -33,42 +33,28 @@ blocks:
     -
         _id: split-banner-slider
         content:
-            subHeading: TARU
-            heading: TARU
+            subHeading:
+            heading:
             p-text: >-
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                do eiusmod  tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim  veniam, quis nostrud exercitation ullamco
-                laboris nisi ut aliquip ex ea  commodo consequat.</p><p>Open 8am
-                - 9pm everyday.</p>
+                <h3>Cuisine</h3><p>Indonesian</p><h3>LOCATION</h3><p>Poolside</p><h3>TEL.</h3><p>+62
+                361
+                2019999</p><h3>HOURS</h3><p>7am-10pm</p><h3>EMAIL</h3><p>dining.regentbali@ihg.com</p>
         carousel:
             desktop-image-position: right
             dots: true
             slides:
                 -
-                    img: /uploads/KC-Regent-slider-11.jpg
-                    alt: Regent Bali Canggu
+                    img: /uploads/taru1.jpg
+                    alt: DINING TARU
                 -
-                    img: /uploads/KC-Regent-slider-10.jpg
-                    alt: Regent Bali Canggu
-                -
-                    img: /uploads/KC-Regent-slider-9.jpg
-                    alt: Regent Bali Canggu
-                -
-                    img: /uploads/KC-Regent-slider-8.jpg
-                    alt: Regent Bali Canggu
-                -
-                    img: /uploads/KC-Regent-slider-7.jpg
-                    alt: Regent Bali Canggu
-                -
-                    img: /uploads/KC-Regent-slider-6.jpg
-                    alt: Regent Bali Canggu
+                    img: /uploads/taru-1.jpg
+                    alt: DINING TARU
         color-scheme: base
         scheme-padding: small-padding
         scheme-max-width: l
     -
         _id: grid-links
-        heading: Menu
+        heading: Menus
         buttons:
             -
                 url: '#'
@@ -77,32 +63,27 @@ blocks:
                 external-Link: false
             -
                 url: '#'
-                text: All-day dining
+                text: 24 hour breakfast
                 download: true
                 external-Link: false
             -
                 url: '#'
-                text: All-day dining
+                text: dessert
                 download: true
                 external-Link: false
             -
                 url: '#'
-                text: All-day dining
+                text: beverages
                 download: true
                 external-Link: false
             -
                 url: '#'
-                text: All-day dining
+                text: kids
                 download: true
                 external-Link: false
             -
                 url: '#'
-                text: All-day dining
-                download: true
-                external-Link: false
-            -
-                url: '#'
-                text: All-day dining
+                text: Pool bar
                 download: true
                 external-Link: false
         column-count: 3
