Updated 1 file via CloudCannon.

--- a/dinning-taru.html
+++ b/dinning-taru.html
@@ -36,9 +36,11 @@ blocks:
             subHeading:
             heading:
             p-text: >-
-                <h3>Cuisine</h3><p>Indonesian</p><h3>LOCATION</h3><p>Poolside</p><h3>TEL.</h3><p>+62
-                361
-                2019999</p><h3>HOURS</h3><p>7am-10pm</p><h3>EMAIL</h3><p>dining.regentbali@ihg.com</p>
+                <h3 class="sub-heading">CUISINE</h3><p>Indonesian</p><h3
+                class="sub-heading">LOCATION</h3><p>Poolside</p><h3
+                class="sub-heading">TEL.</h3><p>+62 361 2019999</p><h3
+                class="sub-heading">HOURS</h3><p>7am-10pm</p><h3
+                class="sub-heading">EMAIL</h3><p>dining.regentbali@ihg.com</p>
         carousel:
             desktop-image-position: right
             dots: true
