Updated 1 file via CloudCannon.

--- a/WeddingEvent.html
+++ b/WeddingEvent.html
@@ -18,7 +18,15 @@ blocks:
         color-scheme: dark
     -
         _id: text-block-top-overlap
-        block-content-html: "<h3>RESTUARANTS &amp; DINING</h3><h2 class=\"heading-lg\">Beach House</h2><p>The latest beachfront destination set along the sun-drenched shores of Canggu, Beach House blends coastal charm with refined elegance—and mesmerizing views directly on the world-famous Echo surf break.\L\L</p><p>Whether you're here to sip artisanal cocktails by the infinity pool, savour fresh locally sourced coastal cuisine, or unwind to sunset sounds, Beach House is your barefoot escape to Bali's effortlessly cool surfside lifestyle. Perfect for intimate gatherings, vibrant events, or serene solo moments—this is Canggu's new home of golden hours and ocean breeze.</p>"
+        block-content-html: >-
+            <h3>WEDDINGS &amp; EVENTS</h3><h2 class="heading-lg">A Moment
+            Becoming a Masterpiece</h2><p>Let us take the particulars of
+            planning out of your hands so you can focus on building meaningful
+            connections with your visitors and guests. With a selection of
+            venues for small and intimate social events, to elaborate soirées,
+            we have a selection of spaces for all requests.<br />Our stunning
+            beachfront location, coupled with the above and beyond nature of
+            Regent service, will assure a memorable event.</p>
         overlay-color-scheme: mint-400
         content-max-width:
         text-alignment: center
