Updated 2 files via CloudCannon.

--- a/WeddingEvent.html
+++ b/WeddingEvent.html
@@ -34,13 +34,25 @@ blocks:
         min-height: 50vh
     -
         _id: banner-split-video
-        block-content-html: ''
-        background-desktop-image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
-        background-mobile-image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
+        block-content-html: >-
+            <h3 class="sub-heading">WEDDINGS AT REGENT BALI CANGGU</h3><h2
+            class="heading-lg">A breathtaking beachside
+            wedding</h2><p>Once-in-a-lifetime weddings deserve extraordinary
+            settings and breathtaking backdrops. Exchange vows surrounded by
+            your closest confidants, family, and friends in a seaside sanctuary
+            where every detail is designed to inspire awe and serenity. Whether
+            it’s an intimate ceremony on the sand or a grand celebration beneath
+            the stars, Regent Bali Canggu offers refined elegance in a truly
+            romantic setting. From personalised planning to exquisite cuisine,
+            your special day is carefully curated to reflect your love
+            story—creating memories that will linger beautifully for a
+            lifetime.</p>
+        background-desktop-image: /uploads/wedding1.jpg
+        background-mobile-image: /uploads/wedding1.jpg
         videos:
             -
-                video_path: /uploads/WEBSITE-BANNER.mp4
-                video_type: mp4
+                video_path:
+                video_type:
         background-alt:
         desktop-image-position: right
         text-alignment: left
