Updated 1 file via CloudCannon.

--- a/WeddingEvent.html
+++ b/WeddingEvent.html
@@ -56,7 +56,7 @@ blocks:
         background-alt:
         desktop-image-position: right
         text-alignment: left
-        vert-alignment: bottom
+        vert-alignment: middle
         mobile-image-position: bottom
         img_aspect: Square
         collapse-top-space: false
